# PythonProject

./: .coveragerc  .flake8  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: documentation_template.md  feature_template.md  refactoring_template.md
.github/workflows/: build.yml  tests.yml  ubuntu-build.yml  windows-build.yml
src/: main.py
tests/: test_greet.py
utils/bundle/: bundle.spec
