[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    "suhee.yoo <ysh4726@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

pyinstaller = "^6.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"
pytest-snapshot = "^0.9.0"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"
sphinx = "^8.0.2"
pytest-mock = "^3.14.0"
pdbpp = "^0.10.3"
isort = "^5.13.2"
hypothesis = "^6.110.2"
coverage = "^7.6.1"
pytest-randomly = "^3.15.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']
skip-string-normalization = true
